tests/neg/semantic_format_scientific_bad_type.baa
// EXPECT: يجب أن يكون 'عشري' مع %ع/%أ

صحيح الرئيسية() {
    اطبع_منسق("x=%أ", ١).
    إرجع ٠.
}
